--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.0",
     "@mui/material": "^5.13.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -20,9 +21,13 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.3.1",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.4",
+    "start": "^5.1.0",
     "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^3.3.1"
   },
