--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
     "@iconify/react": "^4.1.0",
-    "@mui/material": "^5.13.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -20,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.45.0",
     "react-i18next": "^12.3.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
@@ -29,7 +32,8 @@
     "simplebar-react": "^3.2.4",
     "start": "^5.1.0",
     "stylis-plugin-rtl": "^2.1.1",
-    "web-vitals": "^3.3.1"
+    "web-vitals": "^3.3.1",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
